--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,18 @@
     <groupId>com.asodc.example</groupId>
     <artifactId>pax-exam-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
     <modules>
         <module>native-container</module>
+        <module>karaf-container</module>
     </modules>
-    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <exam.version>4.13.4</exam.version>
+        <karaf.version>4.3.2</karaf.version>
+        <osgi.version>6.0.0</osgi.version>
     </properties>
 
     <dependencyManagement>
@@ -33,7 +37,27 @@
                 <version>4.13.2</version>
             </dependency>
 
-            <!-- Pax Exam -->
+            <!-- Karaf -->
+            <dependency>
+                <groupId>org.apache.karaf</groupId>
+                <artifactId>apache-karaf</artifactId>
+                <version>${karaf.version}</version>
+                <type>tar.gz</type>
+                <exclusions>
+                    <!-- No harm in excluding this as we don't seem to have a use for it yet -->
+                    <exclusion>
+                        <groupId>org.apache.karaf</groupId>
+                        <artifactId>org.apache.karaf.client</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.ops4j.pax.exam</groupId>
+                <artifactId>pax-exam-container-karaf</artifactId>
+                <version>${exam.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.ops4j.pax.exam</groupId>
                 <artifactId>pax-exam-container-native</artifactId>
@@ -48,27 +72,8 @@
 
             <dependency>
                 <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam-cm</artifactId>
-                <version>${exam.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.ops4j.pax.exam</groupId>
                 <artifactId>pax-exam-link-mvn</artifactId>
                 <version>${exam.version}</version>
-            </dependency>
-
-            <!-- OSGi -->
-            <dependency>
-                <groupId>org.osgi</groupId>
-                <artifactId>osgi.core</artifactId>
-                <version>6.0.0</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.osgi</groupId>
-                <artifactId>osgi.cmpn</artifactId>
-                <version>6.0.0</version>
             </dependency>
 
             <!-- Felix -->
